Update distribution options in index.html
Replaced 'Bimodal' option with 'Gamma (2,2)' in the distribution select dropdown.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <option value="lognormal">Skewed (lognormal)</option>
         <option value="normal">Normal</option>
         <option value="t">Heavy-tailed (t df = 2)</option>
-        <option value="bimodal">Bimodal</option>
+        <option value="gamma">Gamma (2,2)</option>
       </select>
 
       <label for="n-slider">Sample size: <span id="n-value">50</span></label>
